<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.branches.view.BranchesActivity">

    <RadioGroup
        android:id="@+id/rg_transaction_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:checkedButton="@+id/rb_cash"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_cash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:text="@string/cash"
            android:textColor="@color/colorWhite" />

        <RadioButton
            android:id="@+id/rb_cashless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorWhite"
            android:buttonTint="@color/colorWhite"
            android:text="@string/cashless"
            android:textColor="@color/colorWhite" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorLightGray"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rb_by_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:button="@null"
            android:text="@string/currency" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/rb_by_buying"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:button="@null"
            android:text="@string/buying"
            android:textAlignment="viewEnd" />

        <TextView
            android:id="@+id/rb_by_selling"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:button="@null"
            android:text="@string/selling"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_currencies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/all_branches"
        android:textColor="@color/colorPrimary" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_branches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />
</LinearLayout>